# diff-classifier

./: .gitignore  artifactexplorer.py  pyproject.toml  run.py
all_heuristics_with_issues_message_and_change/: added_tokens.json  eval_results.txt  tokenizer_config.json
all_heuristics_with_issues_only_change/: assigned_labels_berger_files.csv  config.json  eval_results_berger_files.txt  eval_results_mauczka_files.txt
all_heuristics_with_issues_only_message/: added_tokens.json  assigned_labels_levin_files.csv  assigned_labels_manual_labels.herzig.csv  eval_results.txt  eval_results_levin_files.txt  eval_results_manual_labels.herzig.txt  eval_results_mauczka_files.txt
all_heuristics_without_issues_message_and_change/: eval_results.txt  eval_results_berger_files.txt  eval_results_manual_labels.herzig.txt  eval_results_mauczka_files.txt
all_heuristics_without_issues_no_merge_only_message/: assigned_labels_levin_files.csv  assigned_labels_mauczka_files.csv
all_heuristics_without_issues_only_message/: assigned_labels_berger_files.csv  assigned_labels_manual_labels.herzig.csv
bohr_model/: added_tokens.json  assigned_labels.csv  label_map.txt
gitcproc_only_change/: assigned_labels_berger_files.csv  assigned_labels_manual_labels.herzig.csv  eval_results_levin_files.txt  eval_results_manual_labels.herzig.txt
gitcproc_only_message/: assigned_labels_levin_files.csv  assigned_labels_manual_labels.herzig.csv  eval_results.txt  eval_results_levin_files.txt  eval_results_manual_labels.herzig.txt  eval_results_mauczka_files.txt
models/bohr_model/: config.json
(+353 files in other folders)
