[tool.poetry]
name = "bugginess-change"
version = "0.1.0"
description = ""
authors = ["hlib <hlibbabii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
transformers = "^4.12.5"
sklearn = "^0.0"
torch = "^1.10.0"
pymongo = "^4.0"
pandas = "^1.3.4"
jsonlines = "^2.0.0"
appdirs = "^1.4.4"
requests-cache = "^0.9.0"
dvc = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

